# tomlatro

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CardPrinting.hpp  Modifier.hpp  PlayingCard.hpp  Suit.hpp
src/: PlayingCard.cpp  main.cpp
